# teeworlds-infclassCR-Extra

./: .gitignore  CMakeLists.txt  autoexec.cfg  autoreset.cfg  bam.lua
data/languages/: zh-Hans.json
datasrc/: network.py
src/base/tl/: algorithm.h  base.h
src/engine/: server.h
src/engine/server/: mapconverter.cpp  mapconverter.h  roundstatistics.cpp  roundstatistics.h  server.cpp
src/engine/shared/: console.cpp
src/game/: variables.h  version.h
src/game/server/: classes.h  gamecontext.cpp  gamecontext.h  gameworld.h  infconfig.h  player.cpp  player.h
src/game/server/entities/: anti-airmine.cpp  anti-airmine.h  biologist-mine.h  character.cpp  character.h  defence-circle.cpp  defence-circle.h  doctor-funnel.cpp  doctor-funnel.h  doctor-grenade.cpp  elastic-grenade.cpp  elastic-hole.cpp  flyingion.cpp  flyingion.h  freeze-mine.cpp  freeze-mine.h  growingexplosion.cpp  growingexplosion.h  hero-flag.cpp  laser.cpp  looper-wall.cpp  merc-bomb.h  occultist-grenade.cpp  occultist-grenade.h  police-shield.cpp  police-shield.h  scientist-mine.h  siegrid-hammer.cpp  siegrid-hammer.h  slime-entity.cpp  slime-entity.h  slug-slime.cpp  soldier-bomb.cpp  superweapon-indicator.cpp
src/game/server/gamemodes/: mod.cpp
src/game/server/pathfinder/: astar.cpp
src/infclasscr/: geolocation.cpp
